styles for tablet implemented

--- a/src/components/ChangePassword/ChangePassword.module.css
+++ b/src/components/ChangePassword/ChangePassword.module.css
@@ -190,3 +190,18 @@
         font-size: 1.1rem;
     }
 }
+
+@media screen and (max-width: 900px) {
+    #change-password .img-ctn {
+        display: none;
+    }
+
+    #change-password .content-ctn {
+        width: 50%;
+    }
+
+    #change-password .content-ctn .title {
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
