--- a/src/components/ForgotPassword/ForgotPassword.module.css
+++ b/src/components/ForgotPassword/ForgotPassword.module.css
@@ -163,3 +163,9 @@
         font-size: 1.1rem;
     }
 }
+
+@media screen and (max-width: 900px) {
+    #forgot-password .forgotPass-form {
+        width: 50%;
+    }
+}
