--- a/src/components/ForeignProfile/ForeignProfile.module.css
+++ b/src/components/ForeignProfile/ForeignProfile.module.css
@@ -45,6 +45,7 @@
     background-color: #e0e7ff;
     height: 12rem;
     width: 12rem;
+    object-fit: cover;
     border-radius: 100%;
     box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
 }
