--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -111,8 +111,9 @@ a:hover {
 }
 
 .profile-img {
-    width: 3rem;
-    height: 2.5rem;
+    width: 2.7rem;
+    height: 2.7rem;
+    object-fit: cover;
     border-radius: 9999px;
 }
 
@@ -277,8 +278,8 @@ a:hover {
     }
 
     .profile-img {
-        width: 4.8rem;
-        height: 4.3rem;
+        width: 4.2rem;
+        height: 4.2rem;
     }
 
     .dropdown {
@@ -286,8 +287,8 @@ a:hover {
     }
 
     .dropdownMenu-svg {
-        width: 3.1rem;
-        height: 3rem;
+        width: 4.2rem;
+        height: 4.2rem;
     }
 
     .main-dropdown {
