--- a/src/components/Home/CardTemplate.module.css
+++ b/src/components/Home/CardTemplate.module.css
@@ -41,10 +41,11 @@
 .card-details h5 {
     margin-bottom: 0.5rem;
     color: #111827;
-    font-size: 1.25rem;
+    font-size: 1.4rem;
     line-height: 1.75rem;
     font-weight: 500;
     text-align: center;
+    text-transform: uppercase;
 }
 
 .card-details p {
@@ -52,6 +53,7 @@
     color: #374151;
     font-size: 1rem;
     line-height: 1.5rem;
+    text-transform: uppercase;
 }
 
 .card-details .card-details-btn {
