--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,8 +11,8 @@ label {
     cursor: pointer;
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
     body {
         max-width: 350px;
     }
-}
+} */
