--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -6,14 +6,32 @@
     gap: 100px;
     margin-top: 100px;
     padding-bottom: 200px;
+}
+
+.hero {
     position: relative;
 }
 
-.hero-img {
+.hero::after {
+    display: block;
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 50%;
+    bottom: 0px;
+    left: 0px;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(
+        0deg,
+        rgba(255, 255, 255, 1) 28%,
+        rgba(255, 255, 255, 0) 94%
+    );
 }
 
-.hero-img img {
+.hero img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .home-title {
@@ -45,6 +63,10 @@
     text-align: center;
     font-style: italic;
     font-family: Georgia, "Times New Roman", Times, serif;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .home-quote-author {
@@ -59,8 +81,11 @@
     color: #343e48;
     text-align: left;
     /* TODO */
-    margin-top: -90px;
     font-family: Georgia, "Times New Roman", Times, serif;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 .latest-topics-title {
