--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ label {
     cursor: pointer;
 }
 
+:disabled {
+    cursor: not-allowed;
+}
+
 @media screen and (max-width: 450px) {
     body {
         max-width: 450px;
