register error validation refactored

--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -60,6 +60,16 @@
     outline: 0;
 }
 
+#register .error-input-field {
+    border: 1px solid #ff525b !important;
+    animation: shake 200ms ease-in-out 0ms 2;
+}
+
+#register .error-input-field:focus {
+    border: 1px solid #ff525b !important;
+    animation: shake 200ms ease-in-out 0ms 2;
+}
+
 #register .label {
     font-size: 20px;
 }
@@ -127,9 +137,10 @@
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-/* #register .btn:disabled {
+#register .btn:disabled {
+    cursor: not-allowed;
     opacity: 0.5;
-} */
+}
 
 #register .btn:focus {
     background-color: #1d4ed8;
