--- a/src/components/Home/CarouselItem.module.css
+++ b/src/components/Home/CarouselItem.module.css
@@ -20,6 +20,7 @@
 
 .carousel-img {
     margin: 0 auto;
+    cursor: pointer;
     /* width: 500px;
     height: 300px; */
     /* TODO: make the size */
