--- a/src/components/Home/CardTemplate.module.css
+++ b/src/components/Home/CardTemplate.module.css
@@ -22,6 +22,7 @@
 
 .card-img {
     border-radius: 0.5rem;
+    width: 400px;
     height: 280px;
 }
 
@@ -103,6 +104,7 @@
     }
 
     .card-img {
+        width: 280px;
         height: 200px;
     }
 }
