--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -175,38 +175,81 @@
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
 
-@media screen and (max-width: 450px) {
+@media screen and (max-width: 1250px) {
     .home-title {
-        font-size: var(--mainTitle-fs-sm);
+        font-size: 47px;
     }
 
     .home-quote {
-        font-size: 24px;
+        font-size: 28px;
     }
 
     .home-quote-author {
-        font-size: 14px;
+        font-size: 21px;
     }
 
     .latest-topics-title {
-        font-size: 21px;
+        font-size: 28px;
     }
 }
 
 @media screen and (max-width: 900px) {
     .home-title {
-        font-size: var(--mainTitle-fs-md);
+        font-size: 41px;
     }
 
     .home-quote {
         font-size: 28px;
+        top: 38%;
     }
 
     .home-quote-author {
         font-size: 20px;
+        left: 48%;
     }
 
     .latest-topics-title {
         font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .home {
+        margin-top: 30px;
+    }
+
+    .home-title {
+        font-size: 28px;
+    }
+
+    .home-quote {
+        font-size: 20px;
+    }
+
+    .home-quote-author {
+        font-size: 16px;
+    }
+
+    .latest-topics-title {
+        font-size: 28px;
+    }
+}
+
+@media screen and (max-width: 550px) {
+    .home-title {
+        font-size: 21px;
+        top: 1vh;
+    }
+
+    .home-quote {
+        font-size: 16px;
+    }
+
+    .home-quote-author {
+        font-size: 12px;
+    }
+
+    .latest-topics-title {
+        font-size: 21px;
     }
 }
