--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -196,6 +196,7 @@
 @media screen and (max-width: 900px) {
     .home-title {
         font-size: 41px;
+        top: -3vh;
     }
 
     .home-quote {
