--- a/src/components/Causes/Details/Details.module.css
+++ b/src/components/Causes/Details/Details.module.css
@@ -191,7 +191,7 @@
     font-weight: bold;
     text-decoration: none;
     color: #333;
-    border: 3px solid #383838;
+    border: 3px solid #343e48;
     letter-spacing: 2px;
     text-align: center;
     position: relative;
