--- a/src/components/Home/CardTemplate.module.css
+++ b/src/components/Home/CardTemplate.module.css
@@ -5,6 +5,7 @@
     transition-duration: 500ms;
     max-width: 500px;
     border-radius: 0.5rem;
+    margin: 0 auto;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
         0 4px 6px -2px rgba(0, 0, 0, 0.05);
 }
@@ -24,6 +25,7 @@
     border-radius: 0.5rem;
     width: 400px;
     height: 280px;
+    margin: 0 auto;
 }
 
 .card-details {
