--- a/src/components/Causes/MyCauses/JoinedCauses/JoinedCauses.module.css
+++ b/src/components/Causes/MyCauses/JoinedCauses/JoinedCauses.module.css
@@ -16,11 +16,14 @@
 #joined-causes .title {
     margin-top: 1.75rem;
     margin-bottom: 1.75rem;
-    color: #343e48;
-    font-size: 3rem;
-    line-height: 1;
-    font-weight: 500;
-    line-height: 1.25;
+    background-color: var(--aqua-solid);
+    padding: 1rem;
+    font-size: 60px;
+    font-weight: bold;
+    text-transform: uppercase;
+    outline: 2px solid var(--aqua-solid);
+    outline-offset: 0.5rem;
+    color: #3f4c58;
     text-align: center;
 }
 
