--- a/src/components/Causes/MyCauses/MyCreatedCauses/MyCauses.module.css
+++ b/src/components/Causes/MyCauses/MyCreatedCauses/MyCauses.module.css
@@ -10,11 +10,15 @@
 
 #my-causes .my-causes-title {
     margin-bottom: 1.75rem;
-    color: #343e48;
-    font-size: 3rem;
-    line-height: 1;
-    font-weight: 500;
-    line-height: 1.25;
+    background-color: var(--aqua-solid);
+    padding: 1rem;
+    font-size: 60px;
+    font-weight: bold;
+    text-transform: uppercase;
+    outline: 2px solid var(--aqua-solid);
+    outline-offset: 0.5rem;
+    color: #3f4c58;
+    text-align: center;
 }
 
 #my-causes .causes-ctn {
@@ -40,7 +44,7 @@
 
 #my-causes .load-more-btn {
     display: inline-block;
-    width: 20%;
+    width: 25%;
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
     padding-left: 1.75rem;
