--- a/src/shared/BackToTheTopButton.module.css
+++ b/src/shared/BackToTheTopButton.module.css
@@ -6,12 +6,15 @@
     margin-bottom: 7rem;
     background-color: #6366f1;
     color: #ffffff;
-    font-size: 2.25rem;
+    font-size: 2.5rem;
     line-height: 2.5rem;
     font-weight: 700;
     width: 4rem;
     height: 4rem;
     border-radius: 9999px;
-    drop-shadow: drop-shadow(0 4px 3px rgba(0, 0, 0, 0.07))
-        drop-shadow(0 2px 2px rgba(0, 0, 0, 0.06));
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+}
+
+.backToTheTopBtn:hover {
+    background-color: #484bf7;
 }
