--- a/src/components/Home/HeroOfMonth/HeroOfMonth.module.css
+++ b/src/components/Home/HeroOfMonth/HeroOfMonth.module.css
@@ -13,6 +13,7 @@
         0 4px 6px -2px rgb(0 0 0 / 5%);
     position: relative;
     overflow: hidden;
+    border-radius: 15px;
 }
 
 .user-name {
