--- a/src/components/Causes/CreateCause/CreateCause.module.css
+++ b/src/components/Causes/CreateCause/CreateCause.module.css
@@ -17,6 +17,10 @@
     text-align: center;
 }
 
+.input-ctn {
+    margin-bottom: 1.5rem;
+}
+
 .form-input {
     display: block;
     padding: 0.5rem 1rem;
