--- a/src/shared/BackToTheTopButton.module.css
+++ b/src/shared/BackToTheTopButton.module.css
@@ -13,6 +13,7 @@
     height: 4rem;
     border-radius: 9999px;
     box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    z-index: 9999;
 }
 
 .backToTheTopBtn:hover {
