--- a/src/components/User/MyProfile/MyProfile.module.css
+++ b/src/components/User/MyProfile/MyProfile.module.css
@@ -1,5 +1,5 @@
 #my-profile {
-    padding: 2rem;
+    padding: 2rem 2rem 0rem 2rem;
     margin-top: 14rem;
     background-color: #ffffff;
     box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
