--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -201,12 +201,13 @@
         font-size: 21px;
     }
 
-    .latest-topics-title {
+    .latest-topics-title,
+    .discount {
         font-size: 36px;
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 980px) {
     .home-title {
         font-size: 41px;
         top: -3vh;
@@ -222,14 +223,19 @@
         left: 48%;
     }
 
-    .latest-topics-title {
+    .latest-topics-title,
+    .discount {
         font-size: 28px;
+    }
+
+    .carousel-container {
+        width: 80%;
     }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 750px) {
     .home {
-        margin-top: 30px;
+        margin-top: 100px;
     }
 
     .home-title {
@@ -244,12 +250,17 @@
         font-size: 16px;
     }
 
-    .latest-topics-title {
+    .latest-topics-title,
+    .discount {
         font-size: 28px;
+    }
+
+    .carousel-container {
+        width: 95%;
     }
 }
 
-@media screen and (max-width: 550px) {
+@media screen and (max-width: 450px) {
     .home-title {
         font-size: 21px;
         top: 1vh;
@@ -263,7 +274,12 @@
         font-size: 12px;
     }
 
-    .latest-topics-title {
-        font-size: 21px;
+    .latest-topics-title,
+    .discount {
+        font-size: 24px;
+    }
+
+    .carousel-container {
+        width: 98%;
     }
 }
