--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -258,6 +258,10 @@
     .carousel-container {
         width: 95%;
     }
+
+    .hero img {
+        height: 40vh;
+    }
 }
 
 @media screen and (max-width: 450px) {
