--- a/src/components/Causes/Details/CommentBox.module.css
+++ b/src/components/Causes/Details/CommentBox.module.css
@@ -80,6 +80,13 @@
     cursor: not-allowed;
 }
 
+.cannotComment {
+    margin: 30px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    color: red;
+}
+
 /* end-comments */
 
 @keyframes animateC {
